--- a/style.css
+++ b/style.css
@@ -529,6 +529,7 @@ button {
 
 .scrollToTop span {
   margin-top: 6px;
+  color:white;
 }
 
 .showScrollTop {
@@ -600,11 +601,11 @@ a[data-lightbox]:hover img {
   top: 20px;
   right: 20px;
   z-index: 20;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
   border: none;
   line-height: 30px;
   padding: 0 9px 5px;
-  opacity: 0.3;
+  opacity: 1;
 }
 
 .close-lightbox:hover,
@@ -618,7 +619,7 @@ a[data-lightbox]:hover img {
 .prev-lightbox {
   font-size: 20px;
   color: rgba(255, 255, 255, 0.9);
-  background: rgba(0, 0, 0, 0.5);
+  
   transition: all 0.2s ease-in-out;
   position: absolute;
   top: 45%;
